--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,7 @@
               "src/favicon.ico",
               "src/assets",
               {
-                "glob": "_redirects",
+                "glob": "src/_redirects",
                 "input": "src",
                 "output": "/"
               }
